# agentic-rag

./: .gitignore  AGENTS.md  README.md  SKILL.md  pyproject.toml
.github/workflows/: tests.yml
agents/: openai.yaml
docs/mdpr-readme/: accessibility-review.json  narrative-review.json
docs/mdpr-teaser/: accessibility-review.json  narrative-review.json  teaser-spec.json  teaser.md
examples/: in_memory_pipeline.py
references/: agentic-rag-behavior-summary.md  agentic-rag-behavior.md  codex-completion-brief.md  prompts-and-schemas.md  source-map.md
scripts/: validate_skill.py
src/agentic_rag/: __init__.py  components.py  contracts.py  evaluation.py  llm_adapters.py  orchestrator.py  structured.py  sufficiency.py
src/agentic_rag/adapters/: __init__.py  in_memory.py  llm.py  retriever.py  vertex_rag.py
tests/: test_evaluation.py  test_llm_adapter.py  test_orchestrator.py  test_retriever_adapter.py  test_skill_metadata.py  test_sufficiency.py
