[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-rag"
version = "0.1.0"
description = "Agent Skill and dependency-free Python scaffold for iterative, sufficient-context RAG."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  { name = "ch040602" }
]
keywords = [
  "agentic-rag",
  "retrieval-augmented-generation",
  "sufficient-context",
  "citations",
  "codex-skills"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering :: Artificial Intelligence"
]
dependencies = []

[project.urls]
Homepage = "https://github.com/ch040602/agentic-rag"
Repository = "https://github.com/ch040602/agentic-rag"

[tool.setuptools.packages.find]
where = ["src"]
